[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/scythe.png" type="Texture" id=1]
[ext_resource path="res://characters/player/items/item_scythe.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 270, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 90, 90 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 90, 90 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 40.5, 4.5 )

[node name="item_scythe" type="Node2D"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="scythe_trail" type="KinematicBody2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="scythe_trail"]
shape = SubResource( 1 )
disabled = true

[node name="sprite" type="AnimatedSprite" parent="scythe_trail"]
position = Vector2( 0, -9.53674e-07 )
scale = Vector2( 1, 0.672222 )
frames = SubResource( 6 )
animation = "down"

[node name="Area2D" type="Area2D" parent="scythe_trail"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="scythe_trail/Area2D"]
position = Vector2( 0, 26 )
shape = SubResource( 7 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="scythe_trail/Area2D" to="." method="_on_Area2D_body_entered"]
